--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
           <div>
             <h1 class="current-city" id="current-city">--</h1>
             <p class="current-details">
-              <span id="current-date"></span>, moderate rain <br />
+              <span id="current-date"></span>, <span id="description"></span>
+              <br />
               Humidity: <strong id="humidity">--%</strong>, Wind:
               <strong id="wind">--km/h</strong>
             </p>
